logs/ecscli.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/ecscli'...
Compiling './lib/python3.5/site-packages/ecscli/authentication.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (authentication.py, line 441)
Compiling './lib/python3.5/site-packages/ecscli/bucket.py'...
***   File "./lib/python3.5/site-packages/ecscli/bucket.py", line 1629
    print "Error: File does not appear to exist."
                                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ecscli/common.py'...
***   File "./lib/python3.5/site-packages/ecscli/common.py", line 110
    print 'Unexpected exception: ', sys.exc_info()[0]
                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ecscli/config.py'...
***   File "./lib/python3.5/site-packages/ecscli/config.py", line 214
    print "Entered deleteProfile"
                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ecscli/ecscli.py'...
***   File "./lib/python3.5/site-packages/ecscli/ecscli.py", line 140
    print common.get_ecscli_version()
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ecscli/ecscli_interpreter.py'...
***   File "./lib/python3.5/site-packages/ecscli/ecscli_interpreter.py", line 52
    print output
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ecscli/fileshare.py'...
***   File "./lib/python3.5/site-packages/ecscli/fileshare.py", line 710
    print "Operation timed out"
                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ecscli/key.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (key.py, line 68)
Compiling './lib/python3.5/site-packages/ecscli/nfs.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (nfs.py, line 53)
Compiling './lib/python3.5/site-packages/ecscli/order.py'...
***   File "./lib/python3.5/site-packages/ecscli/order.py", line 105
    print "Order is Scheduled"
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ecscli/reporting.py'...
***   File "./lib/python3.5/site-packages/ecscli/reporting.py", line 130
    print ''
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ecscli/snapshot.py'...
***   File "./lib/python3.5/site-packages/ecscli/snapshot.py", line 860
    print "Operation timed out"
                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ecscli/storagesystem.py'...
***   File "./lib/python3.5/site-packages/ecscli/storagesystem.py", line 1167
    print "-sync option will be ignored when -all option is specified"
                                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ecscli/sysmanager.py'...
***   File "./lib/python3.5/site-packages/ecscli/sysmanager.py", line 63
    print print_str
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ecscli/tb.py'...
***   File "./lib/python3.5/site-packages/ecscli/tb.py", line 142
    print template.format('BUCKETNAME', 'OWNER', 'SECRETKEY1', 'SECRETKEY2')
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ecscli/test.py'...
***   File "./lib/python3.5/site-packages/ecscli/test.py", line 43
    print s
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ecscli/test_common.py'...
***   File "./lib/python3.5/site-packages/ecscli/test_common.py", line 22
    print record
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ecscli/test_ssl.py'...
***   File "./lib/python3.5/site-packages/ecscli/test_ssl.py", line 2
    print json.load(urllib2.urlopen('https://www.howsmyssl.com/a/check'))['tls_version']
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ecscli/volume.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (volume.py, line 333)
Listing './lib/python3.5/site-packages/ecscli-3.1.19.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
